--- a/Smart-MOM-Code/Frontend/src/components/UserLoginSignup/Login.scss
+++ b/Smart-MOM-Code/Frontend/src/components/UserLoginSignup/Login.scss
@@ -9,6 +9,32 @@
     background: #ededed;
   }
   
+  #select-css {
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ccc;
+    width: 120px;
+    border-radius: 3px;
+    overflow: hidden;
+    background-color: #fff;
+    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 90% 50%;
+}
+
+#select-css{
+    padding: 5px 8px;
+    width: 130%;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
+
+#select-css:focus {
+    outline: none;
+}
   input, button {
     border: none;
     outline: none;
